# esptool

./: pyproject.toml  setup.py
esptool/: _esf_backend.py  _esf_build.py  cmds.py  loader.py
port/: CMakeLists.txt  esf_port.c  esf_port.h  serial.h
port/platform/posix/: serial.c
port/platform/win/: serial.c
